Refactored name decoration to clean up some logic
- Recursion is no longer a problem, since selector components are disabled, so no hacky two-event system for that needed anymore
- Removed cursed %player substitution and replaced it with prefix/suffix system