@@ -8,8 +8,8 @@ import org.apache.commons.lang3.tuple.Pair;
 
 import com.mojang.brigadier.StringReader;
 
-import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.arguments.ComponentArgument;
+import net.minecraft.commands.arguments.StyleArgument;
 import net.minecraft.nbt.NbtOps;
 import net.minecraft.nbt.SnbtGrammar;
 import net.minecraft.nbt.Tag;
@@ -18,7 +18,7 @@ import net.minecraft.network.chat.ComponentSerialization;
 import net.minecraft.network.chat.ComponentUtils;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.ResolutionContext;
-import net.minecraft.network.chat.contents.PlainTextContents;
+import net.minecraft.network.chat.Style;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.parsing.packrat.commands.CommandArgumentParser;
 import net.minecraft.util.parsing.packrat.commands.Grammar;
@@ -28,42 +28,21 @@ import net.neoforged.bus.api.EventPriority;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.neoforge.event.entity.player.PlayerEvent;
-import net.neoforged.neoforge.event.tick.ServerTickEvent;
 
 @EventBusSubscriber
 public class ModifierEventListener {
 	private static final Grammar<Tag> TAG_PARSER = SnbtGrammar.createParser(NbtOps.INSTANCE);
 	private static final CommandArgumentParser<Component> COMPONENT_PARSER = TAG_PARSER.withCodec(NbtOps.INSTANCE, TAG_PARSER, ComponentSerialization.CODEC, ComponentArgument.ERROR_INVALID_COMPONENT);
+	private static final CommandArgumentParser<Style> STYLE_PARSER = TAG_PARSER.withCodec(NbtOps.INSTANCE, TAG_PARSER, Style.Serializer.CODEC, StyleArgument.ERROR_INVALID_STYLE);
 	private static final List<String> SCHEDULED_REPEATS = new ArrayList<>();
-
-	@SubscribeEvent
-	public static void onServerTick(ServerTickEvent.Pre event) {
-		List<String> scheduledRepeats = new ArrayList<>(SCHEDULED_REPEATS);
-
-		scheduledRepeats.forEach(s -> {
-			Player player = event.getServer().getPlayerList().getPlayerByName(s);
-
-			if (player != null)
-				player.refreshDisplayName();
-		});
-	}
 
 	@SubscribeEvent(priority = EventPriority.LOW)
 	public static void onPlayerName(PlayerEvent.NameFormat event) {
 		if (!(event.getEntity() instanceof ServerPlayer player))
 			return;
-		//The logic of ignoring, re-requesting and using the name format event is required, because the component pattern can reference back to the player's prior display name (e.g. via selector components such as @s)
-		//To prevent the display name from consequently getting longer every time it refreshes, we need to run the refreshing once without our modification (to get a "clean" display name).
-		//Only after such a "clean" display name refreshing (and after a delay of about 1 tick) we refresh the display name again and apply our patterns, so our selectors resolve to the "clean" display name that was computed in the first run.
-		else if (!SCHEDULED_REPEATS.contains(player.getGameProfile().name())) {
-			SCHEDULED_REPEATS.add(player.getGameProfile().name());
-			return;
-		}
 
-		Component modifiedName = modifyName(player, event.getDisplayname(), getPatterns(player, false));
-
-		SCHEDULED_REPEATS.remove(player.getGameProfile().name());
-		event.setDisplayname(modifiedName);
+		if (event.getDisplayname() instanceof MutableComponent displayName)
+			event.setDisplayname(modifyName(player, displayName, getPatterns(player, false)));
 	}
 
 	@SubscribeEvent(priority = EventPriority.LOW)
@@ -71,70 +50,83 @@ public class ModifierEventListener {
 		if (!(event.getEntity() instanceof ServerPlayer player))
 			return;
 
-		Component tabDisplayName = event.getDisplayName();
-		Component modifiedName = modifyName(player, tabDisplayName != null ? tabDisplayName : Component.literal(player.getGameProfile().name()), getPatterns(player, true));
+		Component oldTabName = event.getDisplayName() != null ? event.getDisplayName() : Component.literal(player.getGameProfile().name());
 
-		//Display names and tab list names have different logic regarding teams: For the tab list name, the team prefix/suffix/color doesn't automatically get applied, so we have to do it ourselves, while for the display name, the team components automatically get appended to our modified component.
-		event.setDisplayName(PlayerTeam.formatNameForTeam(player.getTeam(), modifiedName));
+		if (oldTabName instanceof MutableComponent tabDisplayName) {
+			//Display names and tab list names have different logic regarding teams: For the tab list name, the team prefix/suffix/color doesn't automatically get applied, so we have to do it ourselves, while for the display name, the team components automatically get appended to our modified component.
+			event.setDisplayName(PlayerTeam.formatNameForTeam(player.getTeam(), modifyName(player, tabDisplayName, getPatterns(player, true))));
+		}
 	}
 
-	private static Component modifyName(ServerPlayer player, Component oldDisplayName, List<String> patternStack) {
-		if (patternStack.isEmpty())
-			return oldDisplayName;
+	private static MutableComponent modifyName(ServerPlayer player, MutableComponent nameToDecorate, List<NameFormatPattern> patternStack) {
+		if (patternStack.isEmpty()) //Should never happen, but just in case
+			return nameToDecorate;
 
-		String pattern = patternStack.get(patternStack.size() - 1);
+		NameFormatPattern pattern = patternStack.getLast();
 
 		//We recursively chop up the pattern stack here in a way that makes the first entry of the stack apply first, which is used as insertion for the second entry, etc.
 		if (patternStack.size() > 1) {
 			patternStack.remove(pattern);
-			oldDisplayName = modifyName(player, oldDisplayName, patternStack);
+			nameToDecorate = modifyName(player, nameToDecorate, patternStack);
 		}
 
-		Component modifiedName;
-		CommandSourceStack stack = new CommandSourceStack(player.commandSource(), player.position(), player.getRotationVector(), player.level(), player.permissions(), player.getName().getString(), oldDisplayName, player.level().getServer(), player);
+		Component namePrefix, nameSuffix;
+		Style patternStyle;
+		ResolutionContext resolutionContext = ResolutionContext.builder().withEntityOverride(player).build(); //Not setting a CommandSourceStack here is unorthodox, but fixes all recursion issues due to no level being present to check
 
 		try {
-			modifiedName = ComponentUtils.resolve(ResolutionContext.create(stack), COMPONENT_PARSER.parseForCommands(new StringReader(pattern)));
+			namePrefix = pattern.resolvePrefix(resolutionContext);
+			nameSuffix = pattern.resolveSuffix(resolutionContext);
+			patternStyle = pattern.resolveStyle();
 		}
 		catch (Exception e) {
 			PlayerNameModifier.LOGGER.warn(e);
-			return oldDisplayName;
+			return nameToDecorate;
 		}
 
-		List<Component> nameParts = modifiedName.getSiblings();
-		MutableComponent playerInsertedName = Component.empty();
+		MutableComponent decoratedName = Component.empty().append(namePrefix).append(nameToDecorate).append(nameSuffix);
 
-		nameParts.add(modifiedName.plainCopy().withStyle(modifiedName.getStyle()));
+		if (patternStyle != null)
+			decoratedName.setStyle(patternStyle);
 
-		for (Component sibling : nameParts) {
-			if (sibling.getContents() instanceof PlainTextContents.LiteralContents contents && contents.text().contains("%player")) {
-				String[] splitString = contents.text().split("%player", -1); //-1 so empty trailing strings are preserved
-				StringBuilder resultString = new StringBuilder(splitString[0]);
-
-				for (int i = 1; i < splitString.length; i++) {
-					resultString.append(oldDisplayName.getString());
-					resultString.append(splitString[i]);
-				}
-
-				sibling = Component.literal(resultString.toString()).withStyle(sibling.getStyle());
-			}
-
-			playerInsertedName.append(sibling);
-		}
-
-		return playerInsertedName;
+		return decoratedName;
 	}
 
-	public static List<String> getPatterns(Player player, boolean tabListName) {
-		List<String> patternStack = new ArrayList<>();
+	public static List<NameFormatPattern> getPatterns(Player player, boolean tabListName) {
+		List<NameFormatPattern> patternStack = new ArrayList<>();
 
-		for (Map.Entry<List<String>, Pair<String, String>> modifierEntry : ModifierConfig.CONFIG.replacementMap.entrySet()) {
+		for (Map.Entry<List<String>, Pair<NameFormatPattern, NameFormatPattern>> modifierEntry : ModifierConfig.CONFIG.replacementMap.entrySet()) {
 			for (String tag : modifierEntry.getKey()) {
-				if (player.entityTags().contains(tag))
-					patternStack.add("[" + (tabListName ? modifierEntry.getValue().getRight() : modifierEntry.getValue().getLeft()) + "]");
+				if (player.entityTags().contains(tag)) {
+					patternStack.add(tabListName ? modifierEntry.getValue().getRight() : modifierEntry.getValue().getLeft());
+					break;
+				}
 			}
 		}
 
 		return patternStack;
+	}
+
+	public record NameFormatPattern(String prefix, String suffix, String style) {
+		public Component resolvePrefix(ResolutionContext ctx) throws Exception {
+			if (prefix == null)
+				return Component.empty();
+
+			return ComponentUtils.resolve(ctx, COMPONENT_PARSER.parseForCommands(new StringReader(prefix)));
+		}
+
+		public Component resolveSuffix(ResolutionContext ctx) throws Exception {
+			if (suffix == null)
+				return Component.empty();
+
+			return ComponentUtils.resolve(ctx, COMPONENT_PARSER.parseForCommands(new StringReader(suffix)));
+		}
+
+		public Style resolveStyle() throws Exception {
+			if (style == null)
+				return null;
+
+			return STYLE_PARSER.parseForCommands(new StringReader(style));
+		}
 	}
 }
